# mater

./: .gitignore  Cargo.toml  README.md  start.sh  stop.sh
.github/workflows/: frontend.yml  rust.yml  rust_backend.yml
backend/: Cargo.toml  api_endpoints.md  backend.service
backend/.cargo/: config.toml
backend/src/: analytics_calculator.rs  analytics_types.rs  db_utils.rs  get_game_stats.rs  get_player_stats.rs  get_team_stats.rs  init_db.rs  main.rs
deploy/: README.md  deploy.sh  package_and_deploy.sh  setup_scylla.sh
frontend/: nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  PlayerGameStatsTable.jsx  PlayerScatterPlot.jsx  PlayersTable.jsx  TeamStatsTable.jsx  index.css  main.jsx
src/: main.rs
