[package]
name = "mater"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
csv = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }
log = "0.4"
env_logger = "0.11" # Check crates.io for the latest version
scylla = "0.13" # Check for the latest version
tokio = { version = "1", features = ["full"] } # Async runtime
actix-web = "4"
flate2 = "1.1.1"
serde_json = "1.0.140"
futures-util = "0.3.31"
